--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           ruby-version: 3.2
           bundler-cache: true
+          bundler: 2.5.23
 
       - name: Install dependencies
         run: bundle install
