--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           ruby-version: 3.2
           bundler-cache: true
+          bundler: 2.5.23
 
       - name: Install dependencies
         run: bundle install
