--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Stuart Paton
 subtitle: My place to share my love of Technology and Privacy.
 description: >- # this means to ignore newlines until "baseurl:"
 
-url: "https://www.stuartpaton.dev" # the base hostname & protocol for your site, e.g. https://example.github.io
+url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 
 # Navigation
