--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Stuart Paton
 subtitle: My place to share my love of Technology and Privacy.
 description: >- # this means to ignore newlines until "baseurl:"
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://www.stuartpaton.dev"
+baseurl: ""  # This is correct for root-level hosting
 
 # Navigation
 urls:
