Adding deploy on pr for test period

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy Jekyll Site
 on:
   push:
     branches: [master]
+  pull_request:
+    branches: [ master ]
 
 permissions:
   contents: write  # needed to push to gh-pages
