--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy Jekyll Site
 
 on:
   push:
-    branches: [master]
+    branches: [ devlopr_theme ]
   pull_request:
-    branches: [ master ]
+    branches: [ devlopr_theme ]
 
 permissions:
   contents: write  # needed to push to gh-pages
