--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,9 +3,9 @@ name: Deploy Jekyll site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ["devlopr_theme"]
   pull_request:
-    branches: ["master"]
+    branches: ["devlopr_theme"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
