--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   build:
+    if: false
     runs-on: ubuntu-latest
     outputs:
       output-dir: dist
@@ -38,6 +39,7 @@ jobs:
           path: ./_site
 
   deploy:
+    if: false
     runs-on: ubuntu-latest
     needs: build
     steps:
