--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,9 @@ footer:
     - label: GitHub
       icon: fab fa-fw fa-github
       url: https://github.com/patons02
+    - label: "🎨 Select Theme"
+      icon: "fas fa-fw fa-paint-brush"
+      url: "/themes/"
 
 
 # Reading Files
