--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,7 @@ main:
   - title: Projects
     url: /projects
   - title: "Toggle Theme"
-    url: "#theme-toggle"
+    url: "#"
+    id: theme-toggle
     icon: "fas fa-adjust"
     description: "Toggle light∕dark theme"
