--- a/_config.yml
+++ b/_config.yml
@@ -261,6 +261,8 @@ collections:
     permalink: /:collection/:path/
   themes:
     output: true
+    permalink: /themes/:path/
+
 # Defaults
 defaults:
   # _posts
